css/ka.css
body {
    background-color: rgb(255, 255, 255);
}

ul li a {
    text-decoration: none;
    color: white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.logo {
    width: 30%;
}
header {
    background-color: #39B44A;
    height: 100px;
    padding: 20px;
    display: flex; 
    justify-content: space-between;
    align-items: center;
}

header nav a {
    color: white;
    text-decoration: none;
    padding-left: 60px;
    font-size: 20px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
}




main {font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}

h1 {
    text-align: center;
    color: #FC8300;
    margin-top: 50px;
}

h2 {
    margin-top: 50px;
    margin-bottom: 50px;
    font-size: 40px;
    text-align: center;
    color: #694791;
}

h3 {
    color: #39B44A;
    font-size: 50px;
    text-align: center;
    margin-top: 50px;
}

#kavorka-images img{
    margin-top: 30px;
}

#kavorka-images img:hover {
    transform: scale(1.1);
    transition: 0.7s ease-in-out;
}

footer {
    margin-top: 60px;
    background-color: rgb(173, 123, 196);
    height: 120px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    
}

#footer-logo {
    width: 30%;
}

footer p {
    font-size: 10px;
    font-weight: bold;
    line-height: 20px;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}



@media screen and (min-width: 768px) {

    .logo {
            width: 20%;
        }
    
        header {
            height: 150px;
            padding: 70px;
            display: flex;
            justify-content: space-around;
            align-items: center;
        }
    
        header nav a {
            padding-left: 60px;
            font-size: 30px;
        }
    

    footer {
        height: 150px;
    }
   
    #footer-logo {
        width: 20%;
        margin-left: 60px;
    }
}

